# rawr

./: README.rst  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: fmt.yml  pypi-release.yml  reqs.yml
rawr/: __init__.py  rawr.py
